dev/rating/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rating
  namespace: yas-dev
  labels:
    app: rating
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rating
  template:
    metadata:
      labels:
        app: rating
    spec:
      containers:
      - name: rating
        image: ghcr.io/nashtech-garage/yas-rating:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: 256Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m
