dev/rating/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rating
  namespace: yas-dev
  labels:
    app: rating
spec:
  type: ClusterIP
  selector:
    app: rating
  ports:
  - port: 80
    targetPort: 80
